[project]
name = "langchain-start"
version = "0.1.0"
description = "A starter project for LangChain with Ollama and OpenAI support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.3",
    "dotenv>=0.9.9",
    "ipython>=9.10.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pandas>=3.0.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
]
